[gd_scene load_steps=31 format=2]

[ext_resource path="res://scripts/Ring.gd" type="Script" id=1]
[ext_resource path="res://scripts/PlayerBody.gd" type="Script" id=2]
[ext_resource path="res://assets/images/RingSpritesAlpha.png" type="Texture" id=3]
[ext_resource path="res://scripts/BackgroundSprite.gd" type="Script" id=4]
[ext_resource path="res://scripts/CenterSprite.gd" type="Script" id=5]
[ext_resource path="res://scripts/MiddleArea.gd" type="Script" id=6]
[ext_resource path="res://scripts/ScreenCollision.gd" type="Script" id=7]
[ext_resource path="res://scripts/ScreenShake.gd" type="Script" id=8]
[ext_resource path="res://themes/default_theme.tres" type="Theme" id=9]
[ext_resource path="res://scripts/ScoreLabel.gd" type="Script" id=10]
[ext_resource path="res://scripts/HealthLabel.gd" type="Script" id=11]
[ext_resource path="res://assets/fonts/Montserrat/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://scripts/PauseButton.gd" type="Script" id=13]
[ext_resource path="res://assets/sounds/Rings.wav" type="AudioStream" id=14]
[ext_resource path="res://assets/sounds/Jump.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/GameOverControl.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/PauseMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://addons/swipe-detector/swipe_detector.tscn" type="PackedScene" id=18]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.204651, 1 )
colors = PoolColorArray( 0.682739, 0.929688, 0.779203, 1, 0.301961, 0.882353, 0.662745, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.995715, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.177406, 0.987305, 0.745284, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0247999 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
trail_size_modifier = SubResource( 9 )
trail_color_modifier = SubResource( 7 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 334.49
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 32.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 20, 20 )

[sub_resource type="DynamicFont" id=12]
size = 32
use_filter = true
font_data = ExtResource( 12 )

[node name="World" type="Node2D"]
z_index = -2
script = ExtResource( 1 )

[node name="PlayerNode" type="Node" parent="."]
editor/display_folded = true

[node name="PlayerBody" type="KinematicBody2D" parent="PlayerNode"]
position = Vector2( -100, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/PlayerBody"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="PlayerNode/PlayerBody"]
visible = false
position = Vector2( 8.34465e-07, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 256, 256 )

[node name="Particles2D" type="Particles2D" parent="PlayerNode/PlayerBody"]
position = Vector2( 0, -1 )
z_index = -1
amount = 300
local_coords = false
process_material = SubResource( 10 )

[node name="BackgroundNode" type="Node" parent="."]

[node name="BackgroundSprite" type="Sprite" parent="BackgroundNode"]
modulate = Color( 0.2, 0.207843, 0.243137, 1 )
script = ExtResource( 4 )

[node name="CenterSprite" type="Sprite" parent="BackgroundNode"]
modulate = Color( 0.721569, 0.72549, 0.768627, 0.705882 )
position = Vector2( 500, 300 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
region_enabled = true
region_rect = Rect2( 0, 0, 256, 256 )
script = ExtResource( 5 )

[node name="MiddleArea" type="Area2D" parent="BackgroundNode"]
gravity = 0.0
script = ExtResource( 6 )

[node name="ScreenCollision" type="CollisionShape2D" parent="BackgroundNode/MiddleArea"]
shape = SubResource( 11 )
script = ExtResource( 7 )

[node name="ScreenShake" type="Tween" parent="BackgroundNode"]
script = ExtResource( 8 )

[node name="MainCamera" type="Camera2D" parent="BackgroundNode"]
anchor_mode = 0
current = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="Control"]
margin_left = 20.0
margin_top = 20.0
margin_right = 330.0
margin_bottom = 90.0

[node name="ScoreLabel" type="Label" parent="Control/StatsContainer"]
margin_right = 310.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 9 )
text = "Score: "
script = ExtResource( 10 )

[node name="HealthLabel" type="Label" parent="Control/StatsContainer"]
margin_top = 44.0
margin_right = 310.0
margin_bottom = 84.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 9 )
text = "Health: "
script = ExtResource( 11 )

[node name="PauseButton" type="Button" parent="Control"]
margin_left = 940.0
margin_top = 20.0
margin_right = 1000.0
margin_bottom = 80.0
theme = ExtResource( 9 )
custom_fonts/font = SubResource( 12 )
text = "| |"
script = ExtResource( 13 )

[node name="SoundNode" type="Node" parent="."]
editor/display_folded = true

[node name="MusicPlayer" type="AudioStreamPlayer" parent="SoundNode"]
stream = ExtResource( 14 )
autoplay = true

[node name="MovementPlayer" type="AudioStreamPlayer" parent="SoundNode"]
stream = ExtResource( 15 )
volume_db = -10.0
bus = "SFX"

[node name="FXPlayer" type="AudioStreamPlayer" parent="SoundNode"]
pitch_scale = 0.5
bus = "SFX"

[node name="GameOver" type="CanvasLayer" parent="."]
pause_mode = 2
editor/display_folded = true

[node name="GameOverControl" parent="GameOver" instance=ExtResource( 16 )]
visible = false

[node name="PauseCanvas" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="PauseMenu" parent="PauseCanvas" instance=ExtResource( 17 )]
visible = false

[node name="SwipeDetector" parent="." instance=ExtResource( 18 )]
process_method = "Fixed"

[connection signal="body_exited" from="BackgroundNode/MiddleArea" to="BackgroundNode/MiddleArea" method="_on_MiddleArea_body_exited"]
[connection signal="tween_completed" from="BackgroundNode/ScreenShake" to="BackgroundNode/ScreenShake" method="_on_ScreenShake_tween_completed"]
[connection signal="pressed" from="Control/PauseButton" to="Control/PauseButton" method="_on_PauseButton_pressed"]
[connection signal="swiped" from="SwipeDetector" to="PlayerNode/PlayerBody" method="_on_SwipeDetector_swiped"]
